# LSO_Project

./: CMakeLists.txt  list_addr_functions.c  list_addr_functions.h  list_library.c  list_library.h  list_server_addr.c  list_server_addr.h  main.c  message_func_server.c  message_func_server.h  server_main.c  signal_func_server.c  signal_func_server.h  substratum_server.c  substratum_server.h
LSO_Project/: main.c  substratum_server.c  substratum_server.h
Lists/: list_library.c  list_library.h
Lists/addr_list/: list_addr_functions.c  list_addr_functions.h
Lists/data_list/: couple_list.c  couple_list.h
Lists/list_addr/: list_addr_functions.c  list_addr_functions.h
